--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,20 @@
-name: Swift
+name: CI Build
 
-on: [push]
+on:
+  pull_request:
+    branches: [ master ]
 
 jobs:
-  build:
-
+  testing:
+    name: Testing
     runs-on: macOS-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
     - name: Bundle Install 
       run: bundle update --bundler
+
     - name: Build and Tests 
       run: bundle exec fastlane run_unit_tests
