--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,20 @@
-name: CI Build
+# name: CI Build
 
-on:
-  pull_request:
-    branches: [ master ]
+# on:
+#   pull_request:
+#     branches: [ master ]
 
-jobs:
-  testing:
-    name: Testing
-    runs-on: macOS-latest
+# jobs:
+#   testing:
+#     name: Testing
+#     runs-on: macOS-latest
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@v2
 
-    - name: Bundle Update 
-      run: bundle update --bundler
+#     - name: Bundle Update 
+#       run: bundle update --bundler
 
-    - name: Build and Tests 
-      run: bundle exec fastlane run_unit_tests
+#     - name: Build and Tests 
+#       run: bundle exec fastlane run_unit_tests
