--- a/.github/workflows/ciBuild.yml
+++ b/.github/workflows/ciBuild.yml
@@ -22,11 +22,11 @@ jobs:
 
       - name: "Testing"
         env:
-          XCODE_PROJECT: ${{env.PROJECT}}
-          XCODE_SCHEME: ${{env.SCHEME}}
+          XCODE_PROJECT: ${{ env.PROJECT }}
+          XCODE_SCHEME: ${{ env.SCHEME }}
         uses: sersoft-gmbh/xcodebuild-action@v1
         with:
-          project: ${{XCODE_PROJECT}}
-          scheme: ${{XCODE_SCHEME}}
+          project: XCODE_PROJECT
+          scheme: XCODE_SCHEME
           destination: platform=macOS
           action: test
