--- a/.github/workflows/ciBuild.yml
+++ b/.github/workflows/ciBuild.yml
@@ -18,4 +18,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: "Manual Testing"
-        run: xcodebuild clean build test -project ${{ PROJECT }} -scheme ${{ SCHEME }} -destination "platform=iOS Simulator,name=iPhone 12 Pro,OS=latest" | xcpretty
+        run: xcodebuild clean build test -project ${{ env.PROJECT }} -scheme ${{ env.SCHEME }} -destination "platform=iOS Simulator,name=iPhone 12 Pro,OS=latest" | xcpretty
